# iris-ai-classification-pytorch

./: README.md  main.py  pyproject.toml
data/iris/: datos_primeras_5_lineas.csv
notebooks/: red_neuronal_iris.ipynb
notebooks/modelos/: modelo_iris_entrenado.pth
